<resources>
    <string name="app_name">Water Plant</string>
    <string name="welcome_title">Welcome to WATER PLANT</string>
    <string name="water_plant_description">We will help you to schedule watering time for your plants, and we will notify you watering time of your plants</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="already_member_label">Already a member?</string>
    <string name="sign_in_label">Sign in</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="repeat_password_label">Repeat password</string>
    <string name="don_t_you_have_an_account_label">Don\'t you have an account?</string>
    <string name="sign_up_from_here_label">Sign Up from here</string>
    <string name="sign_in_from_here_label">Sign In from here</string>
    <string name="require_field_error">Require field</string>
    <string name="invalid_authorization_error">Invalid username and password, try again</string>
    <string name="not_match_error">Password does not match</string>
    <string name="my_garden_label">My Garden</string>
    <string name="schedule_plant_label">Schedule Plant</string>
    <string name="my_plant_label">My Plants</string>
    <string name="choose_your_plant_from_label">Choose your Plant from…</string>
    <string name="camera_label">Camera</string>
    <string name="gallery_label">Gallery</string>
    <string name="hint_name_msg">Name eg, Rose</string>
    <string name="hint_category_msg">Category eg, Flower</string>
    <string name="sign_in_now_label">Sign In Now</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="create_account_label">Create Account</string>
    <string name="terms_condition_msg">I agree to the <a href="https://www.linkedin.com/in/mrahmad/">Terms and Conditions</a></string>
    <string name="email_label">Email Id</string>
    <string name="my_plant_description">Hey there, your plants waiting for your care.</string>
    <string name="about_developer_label">About Developer</string>
    <string name="log_out_label">Log Out</string>
    <string name="successful_signup_msg">You have been sign-up successfully</string>
    <string name="cancel_label">Cancel</string>
    <string name="save_label">Save</string>
    <string name="get_started_label">Get started</string>
    <string name="new_user_msg">New User? Create an account</string>
    <string name="close_label">close</string>
    <string name="schedule_label">Schedule</string>
    <string name="message_label">Message</string>
    <string name="date_time_label">Date and Time</string>
    <string name="time_picker_title">Pick a time</string>
    <string name="date_picker_title">Pick a date</string>
    <string name="yesterday_label">Yesterday</string>
    <string name="today_label">Today</string>
    <string name="tomorrow_label">Tomorrow</string>
</resources>