<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:id="@+id/header_container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners_bottom_half"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/back_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/transparent"
            app:icon="@drawable/ic_arrow_back"
            app:iconTint="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@mipmap/logo" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/body_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_container_layout"
        android:layout_below="@+id/header_container_layout"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="50dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/create_account_label"
            android:textColor="@color/color_primary"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview"
            android:hint="@string/username_label"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_regular"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_layout"
            android:layout_marginTop="16dp"
            android:hint="@string/email_label"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_regular"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_layout"
            android:layout_marginTop="16dp"
            android:hint="@string/password_label"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock_outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout"
            android:layout_marginTop="16dp"
            android:hint="@string/repeat_password_label"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock_outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/repeat_password_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/terms_condition_msg"
            android:textColor="@color/greyText" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="24dp"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/color_primary"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sign_up_label"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/already_member_label"
            android:textColor="@color/colorDisable"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/sign_in_from_here_label"
            android:textColor="@color/color_primary" />
    </LinearLayout>
</RelativeLayout>